# foreign-subs

./: .env  .flake8  .gitignore  .gitlab-ci.yml  LICENSE  README.md
backend/: __main__.py  pyproject.toml  requirements.txt  setup.py
backend/app/app/api/api_v1/endpoints/: movies.py
backend/app/app/models/: item.py  shared.py  user.py  video.py
backend/config/: config.py
backend/crud/: movie.py
backend/fsubs/: __init__.py  __main__.py
backend/fsubs/config/: __init__.py  config.py  default.ini
backend/fsubs/crud/: __init__.py  movie.py  tvshow.py  user.py
backend/fsubs/models/: __init__.py  misc.py  tvshow.py  user.py  video.py
backend/fsubs/routers/: __init__.py  api.py  authenticate.py  main.py  movies.py  tvshows.py  users.py
backend/fsubs/utils/: auth.py  users.py
backend/models/: video.py
backend/routers/: api.py
docker/: docker-compose.yml
frontend/: .env  angular.json  package-lock.json  package.json
frontend/src/app/: app-routing.module.ts  app.component.html  app.module.ts
frontend/src/app/core/common/footer/: footer.component.html  footer.component.scss  footer.component.ts
frontend/src/app/core/services/: app.service.ts  movies.service.ts
frontend/src/app/pages/movie/: movie.component.html  movie.component.scss  movie.component.ts  movie.module.ts
frontend/src/app/pages/movie-table/: movie-table.component.html  movie-table.component.scss  movie-table.component.ts  movie-table.module.ts
frontend/src/app/pages/search/: search.module.ts
frontend/src/environments/: environment.ts
(+14 files in other folders)
